--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+    <a href="#" class="btn" id="testpage"> Test page</a>
   </body>
 
   <script>
