--- a/testpage.html
+++ b/testpage.html
@@ -11,8 +11,8 @@
   <title>Bootstrap Material</title>
 
   <!-- Material Design fonts -->
-  <link rel="stylesheet" href="https://fonts.proxy.ustclug.org/css?family=Roboto:300,400,500,700" type="text/css">
-  <link href="https://fonts.proxy.ustclug.org/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="./font/font.css" type="text/css">
+  <link href="./font/icon.css" rel="stylesheet">
 
   <!-- Bootstrap -->
   <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
