--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
-    <a href="#" class="btn" id="testpage"> Test page</a>
+    <button id="testpage"> Test page</button>
   </body>
 
   <script>
