--- a/loading.html
+++ b/loading.html
@@ -250,6 +250,11 @@
       cursor: text;
     }
 
+    body,h3,p{
+      -webkit-user-select: none;
+      user-select: none;
+      cursor:default;
+    }
   </style>
   
 </head>
