--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
   <script>
     // You can also require other files to run in this process
+
+    //  防双开，localstorage当前运行id
+    // loading时间长一些
+
     require('./renderer.js')
   </script>
 </html>
