--- a/testpage.html
+++ b/testpage.html
@@ -15,14 +15,14 @@
   <link href="./font/icon.css" rel="stylesheet">
 
   <!-- Bootstrap -->
-  <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./static/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Bootstrap Material Design -->
-  <link href="./node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.css" rel="stylesheet">
-  <link href="./node_modules/bootstrap-material-design/dist/css/ripples.min.css" rel="stylesheet">
+  <link href="./static/css/bootstrap-material-design.css" rel="stylesheet">
+  <link href="./static/css/ripples.min.css" rel="stylesheet">
 
 
-  <link href="./node_modules/bootstrap-material-design/dist/css/snackbar.min.css" rel="stylesheet">
+  <link href="./static/css/snackbar.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -1894,10 +1894,18 @@
   </div>
 </div>
 <br>
-<script>window.$ = window.jQuery = require('./node_modules/jquery/dist/jquery.min');</script>
+<script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
 
-<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./static/js/bootstrap.min.js"></script>
 <script>
+  // $();
+
+  // $(function(){
+  // setInterval(function() {
+  //   alert(localStorage.getItem("myCat"));
+  // }, 2000)
+  // });
+  
   (function () {
 
     var $button = $("<div id='source-button' class='btn btn-primary btn-xs'>&lt; &gt;</div>").click(function () {
@@ -1950,12 +1958,12 @@
   })();
 
 </script>
-<script src="./node_modules/bootstrap-material-design/dist/js/ripples.min.js"></script>
-<script src="./node_modules/bootstrap-material-design/dist/js/material.min.js"></script>
-<script src="./node_modules/bootstrap-material-design/dist/js/snackbar.min.js"></script>
+<script src="./static/js/ripples.min.js"></script>
+<script src="./static/js/material.min.js"></script>
+<script src="./static/js/snackbar.min.js"></script>
 
 
-<script src="./node_modules/bootstrap-material-design/dist/js/jquery.nouislider.min.js"></script>
+<script src="./static/js/jquery.nouislider.min.js"></script>
 <script>
   $(function () {
     $.material.init();
