--- a/matching.html
+++ b/matching.html
@@ -19,38 +19,30 @@
     <link href="./static/css/snackbar.min.css" rel="stylesheet">
     
     <style>
-      #menu a {
-        width: 30%;
-      }
-
-      #title h1 {
-        font-size: 7em;
-      }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="row">
-        <div class="col-sm-12  text-center">
-        <div id="title">
-            <h1><span id = "alpha">Alpha</span><span id="red7" class="text-danger">Red7</span></h1>
-        </div>
-        </div>
+<div class = "row">
+  <div class = "col-sm-6">
+    <div class = "well infobox" style="width: 90%; height:70%; margin: auto; margin-top: 5%;">
     </div>
+  </div>
 
-
-
-    <div class="row">
-        <div class="col-sm-12  text-center" id = "menu">
-            <a class="btn btn-raised btn-info">Start</a>
-            <br/>
-            <a class="btn btn-raised btn-success">My AI</a>
-            <br/>
-            <a class="btn btn-raised btn-danger">Lab</a>
-        </div>
+  <div class = "col-sm-6">
+    <div class = "well infobox" style="width: 90%; height:70%; margin: auto; margin-top: 5%;">
     </div>
+  </div>
 </div>
+
+<div class = "row text-center">
+  <a class="btn btn-raised btn-success" style="margin-top: 5%">Play</a>
+</div>
+
+</div>
+
+
 <script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
 
 <script src="./static/js/bootstrap.min.js"></script>
