--- a/arena.html
+++ b/arena.html
@@ -28,7 +28,7 @@
   <div class = "col-sm-12 text-center">
     <div class = "well infobox" style="width: 96%; height:90%; margin: auto; margin-top: 3%;">
         <div class="row"> 
-            <div class="col-sm-9">
+            <div class="col-sm-10">
                 <style>
                     .card-lg{
                         width:60px;
@@ -40,7 +40,7 @@
                 <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
                 <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                 <p>ZRT
                 <br/>
                 28 </p>
@@ -75,12 +75,12 @@
 
         </div>
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                 <p>Chenyao
                 <br/>
                 31 </p>
             </div>
-             <div class="col-sm-9">
+             <div class="col-sm-10">
                 <style>
                     .card-lg{
                         width:60px;
@@ -88,6 +88,10 @@
                         margin-left: 8px;
                     }
                  </style>
+                <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
+                <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
+                <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
+                <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
                 <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
                 <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
                 <div class="card-lg card-red card-7 well"> <span>7</span> <br> <img src="./loading.svg" width="30px">   </div>
