--- a/home.html
+++ b/home.html
@@ -19,10 +19,15 @@
     <link href="./static/css/snackbar.min.css" rel="stylesheet">
     
     <style>
-      #menu a {
-        width: 30%;
+      #title{
+        margin-top: 60px; 
       }
-
+      #menu a {
+        width: 35%;
+      }
+      #menu {
+        margin-top: 80px;
+      }
       #title h1 {
         font-size: 7em;
       }
@@ -43,11 +48,15 @@
 
     <div class="row">
         <div class="col-sm-12  text-center" id = "menu">
-            <a class="btn btn-raised btn-info">Start</a>
-            <br/>
+            <div>
+            <a class="btn btn-raised btn-info" >Start Game</a>
+            </div>
+            <div>
             <a class="btn btn-raised btn-success">My AI</a>
-            <br/>
+            </div>
+            <div>
             <a class="btn btn-raised btn-danger">Lab</a>
+            </div>
         </div>
     </div>
 </div>
