--- a/myai.html
+++ b/myai.html
@@ -1,4 +1,5 @@
 <html>
+  <!--Also LAB-->
 <head>
     <meta charset="UTF-8">
     <title>AlphaRed7 Platform</title>
@@ -26,6 +27,7 @@
 <div class="container">
     <div class = "row">
         <div class = "col-sm-7">
+          <h3> MY AI </h3>
         <div class="list-group">
   <div class="list-group-item">
     <div class="row-content">
