--- a/arena.html
+++ b/arena.html
@@ -41,7 +41,7 @@
 <div class="container">
 <div class = "row">
   <div class = "col-sm-12 text-center">
-    <div class = "well infobox" style="width: 96%; height:90%; margin: auto; margin-top: 3%;">
+    <div class = "well infobox" style="width: 98%; height:93%; margin: auto; margin-top: 2%;">
         <div class="row"> 
             <div class="col-sm-10">
                  <div id="handB">
@@ -60,9 +60,25 @@
                  <div id="paletteB"></div>
          </div>
         <div class="row text-warning" id="rule" style="height:100px;"></div>
+        <div class="row" id="op-pan">
+            <div class="col-sm-3">
+            <a href="javascript:click_play()" class="btn btn-xs btn-success disabled" id="play">PLAY!</a>
+            </div>
+            <div class="col-sm-3">
+            <a href="javascript:click_card()" class="btn btn-xs btn-info disabled" id="play-card">TO PALETTE</a>
+            </div>
+            <div class="col-sm-3">
+            <a  href="javascript:click_rule()" class="btn btn-xs btn-info disabled" id="play-rule">CHANGE RULE</a>
+            </div>
+            <div class="col-sm-3">
+            <a  href="javascript:click_undo()" class="btn btn-xs btn-danger disabled" id="undo">UNDO</a>
+            </div>  
+        </div>
         <div class="row"> 
+          <div class="col-sm-12">
                  <div id="paletteA"></div>
-
+          </div>
+          
         </div>
         <div class="row">
             <div class="col-sm-2">
