--- a/arena.html
+++ b/arena.html
@@ -60,19 +60,26 @@
                  <div id="paletteB"></div>
          </div>
         <div class="row text-warning" id="rule" style="height:100px;"></div>
-        <div class="row" id="op-pan">
-            <div class="col-sm-3">
+        <div class="row" id="op-pan" style="display:none;">
+            <div class="col-sm-2">
+            </div>  
+             <div class="col-sm-2">
+            <a  href="javascript:click_withdraw()" class="btn btn-xs btn-danger btn-raised " id="withdraw">WITHDRAW</a>
+            </div>  
+           
+            <div class="col-sm-2">
             <a href="javascript:click_play()" class="btn btn-xs btn-success disabled" id="play">PLAY!</a>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
             <a href="javascript:click_card()" class="btn btn-xs btn-info disabled" id="play-card">TO PALETTE</a>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
             <a  href="javascript:click_rule()" class="btn btn-xs btn-info disabled" id="play-rule">CHANGE RULE</a>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
             <a  href="javascript:click_undo()" class="btn btn-xs btn-danger disabled" id="undo">UNDO</a>
             </div>  
+            
         </div>
         <div class="row"> 
           <div class="col-sm-12">
