--- a/arena.html
+++ b/arena.html
@@ -58,11 +58,9 @@
                   </div>
             </div>
             <div class="col-sm-2">
-                <p><span id="nameB"> </span>
-                <br/>
-                <span id="scoreB"></span></p>
-                <br/>
-                <span id="clockB"> </span>
+                <div id="nameB"> </div>
+                <div id="scoreB"></div>
+                <div id="clockB" style="display:-webkit-inline-box;"></div>
             </div>
         </div>
         <div class="row">
@@ -72,11 +70,11 @@
         <div class="row"  style="height: 50px;">
           <div id="op-pan" style="display:none;">
 
-            <a  style= "width:100px; margin-right: 50px;" href="javascript:click_withdraw()" class="btn btn-sm btn-danger btn-raised " id="withdraw">WITHDRAW</a>
-            <a  style= "width:120px;" href="javascript:click_play()" class="btn btn-sm btn-success disabled" id="play">PLAY!</a>
+            <a  style= "width:130px; margin-right: 40px;" href="javascript:click_withdraw()" class="btn btn-sm btn-danger btn-raised " id="withdraw"><i class="material-icons">warning</i>WITHDRAW</a>
+            <a  style= "width:120px;" href="javascript:click_play()" class="btn btn-sm btn-success disabled" id="play"><i class="material-icons">done</i>PLAY!</a>
             <a  style= "width:120px;" href="javascript:click_card()" class="btn btn-sm btn-info disabled" id="play-card">TO PALETTE</a>
             <a   style= "width:120px;" href="javascript:click_rule()" class="btn btn-sm btn-info disabled" id="play-rule">CHANGE RULE</a>
-            <a    style= "width:120px;" href="javascript:click_undo()" class="btn btn-sm btn-danger disabled" id="undo">UNDO</a>
+            <a    style= "width:120px;" href="javascript:click_undo()" class="btn btn-sm btn-danger disabled" id="undo"><i class="material-icons">undo</i>UNDO</a>
             </div>
         </div>
         <div class="row"> 
@@ -87,11 +85,9 @@
         </div>
         <div class="row">
             <div class="col-sm-2">
-                <p><span id="nameA"> </span>
-                <br/>
-                <span id="scoreA"></span></p>
-                <br/>
-                <span id="clockA"> </span>
+                <div id="nameA"> </div>
+                <div id="scoreA"></div>
+                <div id="clockA" style="display:-webkit-inline-box;"></div>
             </div>
              <div class="col-sm-10">
                  <div id="handA" style="height: 95px;">
