--- a/arena.html
+++ b/arena.html
@@ -42,6 +42,9 @@
        font-size: 2em; 
        margin-left: 10px;
       }
+      .highlight img{
+        box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      }
     </style>
 </head>
 
