--- a/myai.html
+++ b/myai.html
@@ -41,7 +41,7 @@
 <div class="container">
     <div class = "row">
         <div class = "col-sm-7">
-          <h3> MY AI </h3>
+          <h4> <label class="label label-info"> MY AI</label> </h4>
         <div class="list-group" id="showbot">
   
 </div>
@@ -55,7 +55,7 @@
         <div class = "col-sm-5">
           
 
-            <div class = "well" style="margin-top:30px;">
+            <div class = "well" style="margin-top:30px;height:350px;">
             <form class="form-horizontal">
   <fieldset>
     <legend id="title">Select or ADD an AI</legend>
