--- a/arena.html
+++ b/arena.html
@@ -61,9 +61,13 @@
                   </div>
             </div>
             <div class="col-sm-2">
-                <div id="nameB"> </div>
-                <div id="scoreB"></div>
+              <div style="display:-webkit-inline-box;">
+                <i class="material-icons" style="font-size:2em;">account_box</i><div id="nameB" style="font-size:1.4em;"> </div>
+                </div>
+                <div style="display: -webkit-inline-box;margin-top:10px;">
+               <i class="material-icons" style="margin-right:4px;">assessment</i> <div id="scoreB" style="margin-right:7px;font-size:1.2em;"></div>
                 <div id="clockB" style="display:-webkit-inline-box;"></div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -88,9 +92,13 @@
         </div>
         <div class="row">
             <div class="col-sm-2">
-                <div id="nameA"> </div>
-                <div id="scoreA"></div>
+              <div style="display:-webkit-inline-box;">
+                <i class="material-icons" style="font-size:2em;">account_box</i><div id="nameA" style="font-size:1.4em;"> </div>
+                </div>
+                <div style="display: -webkit-inline-box;margin-top:10px;">
+               <i class="material-icons" style="margin-right:4px;">assessment</i> <div id="scoreA" style="margin-right:7px;font-size:1.2em;"></div>
                 <div id="clockA" style="display:-webkit-inline-box;"></div>
+                </div>
             </div>
              <div class="col-sm-10">
                  <div id="handA" style="height: 95px;">
