--- a/myai.html
+++ b/myai.html
@@ -63,7 +63,7 @@
       <label for="inputName" class="col-sm-2 control-label">Name</label>
 
       <div class="col-sm-10">
-        <input type="text" pattern="^[0-9a-zA-Z]{5,20}$" class="form-control" id="inputName" placeholder="Type AI Name">
+        <input type="text" pattern="^[0-9a-zA-Z]{3,12}$" class="form-control" id="inputName" placeholder="Type AI Name">
       </div>
     </div>
     <div class="form-group" id="group2" style="display:none">
@@ -100,7 +100,7 @@
                 <a style="width: 100%" class = "btn btn-raised btn-warning" onclick="click_add_ai();">Add AI</a>
             </div>
             <div id = "battle" style="display:none;">
-                <a style="width: 100%" class = "btn btn-raised btn-danger" onclick="click_battle();">Battle!</a>
+                <a style="width: 100%" class = "btn btn-raised btn-success" onclick="click_battle();">Battle!</a>
             </div>
         </div>
     </div>
