--- a/myai.html
+++ b/myai.html
@@ -63,7 +63,7 @@
       <label for="inputName" class="col-sm-2 control-label">Name</label>
 
       <div class="col-sm-10">
-        <input type="text" pattern="^[0-9a-zA-Z]{3,12}$" class="form-control" id="inputName" placeholder="Type AI Name">
+        <input type="text" pattern="^[0-9a-zA-Z_]{3,12}$" class="form-control" id="inputName" placeholder="Type AI Name">
       </div>
     </div>
     <div class="form-group" id="group2" style="display:none">
