--- a/matching.html
+++ b/matching.html
@@ -17,6 +17,8 @@
 
 
     <link href="./static/css/snackbar.min.css" rel="stylesheet">
+
+    <link href="./static/css/jquery-confirm.min.css" rel="stylesheet">
     
     <style>
     #back{
@@ -138,6 +140,8 @@
 
 
 <script src="./static/js/jquery.nouislider.min.js"></script>
+
+<script src="./static/js/jquery-confirm.min.js"></script>
 <script>
   $(function () {
     $.material.init();
