--- a/testpage.html
+++ b/testpage.html
@@ -23,6 +23,7 @@
 
 
   <link href="./static/css/snackbar.min.css" rel="stylesheet">
+  <link href="./static/css/jquery-confirm.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -1897,6 +1898,8 @@
 <script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
 
 <script src="./static/js/bootstrap.min.js"></script>
+
+<script src="./static/js/jquery-confirm.min.js"></script>
 <script>
   // $();
 
