--- a/arena.html
+++ b/arena.html
@@ -17,6 +17,8 @@
 
 
     <link href="./static/css/snackbar.min.css" rel="stylesheet">
+
+    <link href="./static/css/jquery-confirm.min.css" rel="stylesheet">
     <style>
       .card-lg{
           width:60px;
@@ -118,6 +120,7 @@
 <script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
 
 <script src="./static/js/bootstrap.min.js"></script>
+<script src="./static/js/jquery-confirm.min.js"></script>
 <script>
   // $();
 
