--- a/myai.html
+++ b/myai.html
@@ -18,6 +18,7 @@
 
 
     <link href="./static/css/snackbar.min.css" rel="stylesheet">
+    <link href="./static/css/jquery-confirm.min.css" rel="stylesheet">
     
     <style>
       #back{
@@ -110,6 +111,8 @@
 <script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
 
 <script src="./static/js/bootstrap.min.js"></script>
+
+<script src="./static/js/jquery-confirm.min.js"></script>
 <script>
   // $();
 
