--- a/myai.html
+++ b/myai.html
@@ -98,10 +98,10 @@
 </form>
             </div>
             <div id = "add-ai">
-                <a style="width: 100%" class = "btn btn-raised btn-warning" onclick="click_add_ai();">Add AI</a>
+                <a style="width: 100%" class = "btn btn-raised btn-default" onclick="click_add_ai();">Add New AI</a>
             </div>
             <div id = "battle" style="display:none;">
-                <a style="width: 100%" class = "btn btn-raised btn-success" onclick="click_battle();">Battle!</a>
+                <a style="width: 100%" class = "btn btn-raised btn-success" onclick="click_battle();">USE THIS AI</a>
             </div>
         </div>
     </div>
