--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
     <link href="./static/css/snackbar.min.css" rel="stylesheet">
 
     <link href="./static/css/jquery-confirm.min.css" rel="stylesheet">
+    <link href="./static/css/component.css" rel="stylesheet">
     
     <style>
       #title{
@@ -75,9 +76,11 @@
 </div>
 <a id="bug" class="btn"  href="#" onclick="bug();"><i class="material-icons">bug_report</i> </a>
 
+
 <script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
 
 <script src="./bugreporter.js"> </script>
+<script src="./online.js"> </script>
 
 <script src="./static/js/bootstrap.min.js"></script>
 
