--- a/home.html
+++ b/home.html
@@ -44,6 +44,9 @@
         right: 20px;
         bottom: 10px;
       }
+      .nosee{
+        display: none;
+      }
     </style>
     
 </head>
@@ -142,6 +145,7 @@
 <script src="./static/js/ripples.min.js"></script>
 <script src="./static/js/material.min.js"></script>
 <script src="./static/js/snackbar.min.js"></script>
+<script src="./home.js"></script>
 
 
 <script src="./static/js/jquery.nouislider.min.js"></script>
