--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
 
     <link href="./static/css/jquery-confirm.min.css" rel="stylesheet">
     <link href="./static/css/component.css" rel="stylesheet">
+    <link href="./static/css/online.css" rel="stylesheet">
     
     <style>
       #title{
@@ -78,7 +79,15 @@
     </div>
 </div>
 <a id="bug" class="btn"  href="#" onclick="bug();"><i class="material-icons">bug_report</i> </a>
-
+<div id = "online">
+<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1" style="overflow-y:scroll;">
+			<h3>Online Player</h3>
+      <a onclick="click_return();"><i class="material-icons">arrow_back</i> <span class="online-num label label-success"></span> players online</a>
+      <div id="online-list" >
+      </div>
+		</nav>
+    <button id="showLeft" class="online-num btn btn-success btn-raised" style="position:absolute;left:20px;top:60px;"></button>
+</div>
 
 <script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
 
@@ -88,6 +97,7 @@
 <script src="./static/js/bootstrap.min.js"></script>
 
 <script src="./static/js/jquery-confirm.min.js"></script>
+<script src="./static/js/classie.js"></script>
 <script>
   
   (function () {
