--- a/matching.html
+++ b/matching.html
@@ -61,9 +61,18 @@
     <div class = "well infobox" style="width: 90%; height:70%; margin: auto; margin-top: 5%;">
       <h3 id="Bid"></h3>
       <div class="text-center"> 
+        <div id="notonlineop">
+
       <a  class="btn btn-info btn-raised" style="margin-top:60px;width:200px;" onclick="click_remote();"><i class="material-icons">supervisor_account</i>ONLINE PLAYER </a>
       <a  class="btn btn-primary btn-raised" style="margin-top:20px;width:200px;" onclick="click_B_ai();"> <i class="material-icons">computer</i>USE LOCAL AI </a> 
       <a class="btn btn-success disabled" style="margin-top:20px;width:200px;">Current: <span id="Bcur"></span></a>
+          </div>
+        <div id="onlineop" style="display:none;">
+          <a class="btn btn-success disabled" style="margin-top:20px;width:200px;">Type: <span id="optype"></span></a>
+          <a class="btn btn-success disabled" style="margin-top:0px;width:200px;">Hide hands: <span id="ophideB"></span></a>
+          <a class="btn btn-success disabled" style="margin-top:0px;width:200px;">Round time: <span id="oproundtime"></span></a>
+          <a class="btn btn-success disabled" style="margin-top:0px;width:200px;">AI extra wait time: <span id="opaiwaittime"></span></a>
+        </div> 
       </div>
     </div>
   </div>
