--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
 <div id = "online">
 <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1" style="overflow-y:scroll;">
 			<h3>Online Player</h3>
-      <a onclick="click_return();"><i class="material-icons">arrow_back</i> <span class="online-num label label-success"></span> players online</a>
+      <a onclick="click_return();"><i class="material-icons">arrow_back</i> <span class="">BACK</span></a>
       <div id="online-list" >
       </div>
 		</nav>
