--- a/home.html
+++ b/home.html
@@ -73,11 +73,13 @@
             <a href="./myai.html" class="btn btn-raised btn-success">My AI</a>
             </div>
             <div>
-            <a href="./lab.html" class="btn btn-raised btn-danger">Lab</a>
+            <a href="javascript:$.alert('Some experimental features. Coming soon...')" class="btn btn-raised btn-danger">Lab</a>
             </div>
         </div>
     </div>
 </div>
+
+
 <a id="bug" class="btn"  href="#" onclick="bug();"><i class="material-icons">bug_report</i> </a>
 <div id = "online">
 <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1" style="overflow-y:scroll;">
@@ -92,12 +94,12 @@
 <script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
 
 <script src="./bugreporter.js"> </script>
+<script src="./static/js/classie.js"></script>
 <script src="./online.js"> </script>
 
 <script src="./static/js/bootstrap.min.js"></script>
 
 <script src="./static/js/jquery-confirm.min.js"></script>
-<script src="./static/js/classie.js"></script>
 <script>
   
   (function () {
