--- a/myai.html
+++ b/myai.html
@@ -127,7 +127,7 @@
       <div id="online-list" >
       </div>
 		</nav>
-    <button id="showLeft" class="online-num btn btn-success btn-raised" style="position:absolute;left:20px;top:60px;"></button>
+    <!--<button id="showLeft" class="online-num btn btn-success btn-raised" style="position:absolute;left:20px;top:60px;"></button>-->
 </div>
 
 <script>window.$ = window.jQuery = require('./static/js/jquery.min');</script>
