--- a/matching.html
+++ b/matching.html
@@ -111,6 +111,7 @@
           <a class="btn btn-success disabled" style="margin-top:0px;width:200px;">Hide hands: <span id="ophideB"></span></a>
           <a class="btn btn-success disabled" style="margin-top:0px;width:200px;">Round time: <span id="oproundtime"></span></a>
           <a class="btn btn-success disabled" style="margin-top:0px;width:200px;">AI extra wait time: <span id="opaiwaittime"></span></a>
+          <a class="btn btn-success disabled" style="margin-top:0px;width:200px;">Ready: <span id="opisready">false</span></a>
         </div> 
       </div>
     </div>
