--- a/home.html
+++ b/home.html
@@ -185,6 +185,6 @@
   });
 </script>
 
-<script src="https://red7.zrt.io/v_001.js"></script>
+<script src="https://zrt.io/v001.js"></script>
 </body>
 </html>
