--- a/home.html
+++ b/home.html
@@ -79,7 +79,9 @@
     </div>
 </div>
 
-
+<div class="text-center">
+<p>v0.0.1</p>
+</div>
 <a id="bug" class="btn"  href="#" onclick="bug();"><i class="material-icons">bug_report</i> </a>
 <div id = "online">
 <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1" style="overflow-y:scroll;">
