--- a/arena.html
+++ b/arena.html
@@ -127,6 +127,7 @@
 
 </div>
 
+<img src="./static/img/rainbow-thin.png" style="position:absolute;top:0px;left:0px;"></img>
 
 <a id="bug" class="btn"  href="#" onclick="bug();"><i class="material-icons">bug_report</i> </a>
 <div id = "online" style="display:none;">
