--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,28 @@
     </section>
 
     <section class="main-content">
-      <h1 id="bug"> Fixed bug </h1>
-      <p> v0.0.2<br> 本地人机对战时不显示自己用户名。<br> save settings 现在真的能save了。<br> </p>
+      
+      <h1 id="bug">Release Notes</h1>
+      <p> <h2>v0.0.3</h2>
+       <h3>Improvements</h3> 
+       <ul>
+       <li>设置了应用图标。</li> 
+       <li>提升与段老师平台输入时的兼容性。</li> 
+       <li> save settings 现在真的能save了。</li> 
+       <li> 比赛界面左侧添加了颜色条。</li>
+        <li>支持对手牌排序(默认按颜色，可选按数字)。</li>
+       </ul>
+       <h3>Fixes</h3>
+       <ul>
+         <li>
+       本地人机对战时不显示自己用户名。</li> 
+       </ul>
+        </p>
+      <p> <h2>v0.0.2</h2> 
+       <h3>Fixes</h3>
+       <ul><li>
+       Mac版删除了多余的调试信息，防止Segmentfault崩溃。</li></ul> </p>
+      <p><h2> v0.0.1</h2> <ul><li>第一个公开版本!</li></ul></p>
       <h1 id="version">Downloads</h1>
 <p><em>校内免流~</em></p>
 <p>
@@ -25,6 +45,18 @@ Windows: <a href ="./AlphaRed7-GUI-0.0.1-win-x86.zip">AlphaRed7-GUI-0.0.1-win-x8
     macOS: <a href ="./AlphaRed7-GUI-0.0.2-mac.zip">AlphaRed7-GUI-0.0.2-mac.zip</a><br>
 Linux: <a href ="./AlphaRed7-GUI-0.0.1-linux-x64.tar.gz">AlphaRed7-GUI-0.0.1-linux-x64.tar.gz</a><br> 
  </p>
+
+      <h1 id="next">Future Features</h1>
+      <!-- 不太可能支持的feature -->
+      <ul>
+      <li>支持重置本地设置。</li>
+      <li>观战功能。</li>
+      <li>导出对战记录与播放对战记录。</li>
+      <li>多AI辅助人机对战。</li>
+      <li>用户信息导入与导出。</li>
+      <li>支持双AI无动画多局对战，方便观察两AI胜率。</li>
+      <li>其他建议或bug可以微信私聊或使用软件右下角提交bug按钮。</li>
+      </ul>
     </section>
 
 	<footer class="site-footer">
