--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
        <ul>
        <li>设置了应用图标。</li> 
        <li>提升与段老师平台输入时的兼容性。</li> 
-       <li> save settings 现在真的能save了。</li> 
+       <li> 去掉无用save settings按钮，改成自动保存，并且现在真的能save了。</li> 
        <li> 比赛界面左侧添加了颜色条。</li>
         <li>支持对手牌排序(默认按颜色，可选按数字)。</li>
        </ul>
