--- a/web/index.html
+++ b/web/index.html
@@ -41,9 +41,12 @@
       <h1 id="version">Downloads</h1>
 <p><em>校内免流~</em></p>
 <p>
-Windows: <a href ="./AlphaRed7-GUI-0.0.1-win-x86.zip">AlphaRed7-GUI-0.0.1-win-x86.zip</a><br> 
-    macOS: <a href ="./AlphaRed7-GUI-0.0.2-mac.zip">AlphaRed7-GUI-0.0.2-mac.zip</a><br>
-Linux: <a href ="./AlphaRed7-GUI-0.0.1-linux-x64.tar.gz">AlphaRed7-GUI-0.0.1-linux-x64.tar.gz</a><br> 
+  <ul>
+    <li>Windows: <a href ="./AlphaRed7-GUI-0.0.3-win-x86.zip">AlphaRed7-GUI-0.0.3-win-x86.zip</a> </li>
+    <li>macOS: <a href ="./AlphaRed7-GUI-0.0.3-mac.zip">AlphaRed7-GUI-0.0.3-mac.zip</a></li>
+    <li>Linux: <a href ="./AlphaRed7-GUI-0.0.3-linux-x64.tar.gz">AlphaRed7-GUI-0.0.3-linux-x64.tar.gz</a></li>
+  </ul>
+  <em>macOS用户建议使用新版程序直接替换旧版程序，防止丢失用户信息。</em>
  </p>
 
       <h1 id="next">Future Features</h1>
