--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,17 @@
     </section>
 
     <section class="main-content">
-      
-      <h1 id="bug">Release Notes</h1>
+            <h1 id="version">v0.0.3 Downloads</h1>
+<p><em>校内免流~</em></p>
+<p>
+  <ul>
+    <li>Windows: <a href ="./AlphaRed7-GUI-0.0.3-win-x86.zip">AlphaRed7-GUI-0.0.3-win-x86.zip</a> </li>
+    <li>macOS: <a href ="./AlphaRed7-GUI-0.0.3-mac.zip">AlphaRed7-GUI-0.0.3-mac.zip</a></li>
+    <li>Linux: <a href ="./AlphaRed7-GUI-0.0.3-linux-x64.tar.gz">AlphaRed7-GUI-0.0.3-linux-x64.tar.gz</a></li>
+  </ul>
+  <em>macOS用户建议使用新版程序直接替换旧版程序，防止丢失用户信息。</em>
+ </p>
+      <h1 id="note">Release Notes</h1>
       <p> <h2>v0.0.3</h2>
        <h3>Improvements</h3> 
        <ul>
@@ -38,16 +47,7 @@
        <ul><li>
        Mac版删除了多余的调试信息，防止Segmentfault崩溃。</li></ul> </p>
       <p><h2> v0.0.1</h2> <ul><li>第一个公开版本!</li></ul></p>
-      <h1 id="version">Downloads</h1>
-<p><em>校内免流~</em></p>
-<p>
-  <ul>
-    <li>Windows: <a href ="./AlphaRed7-GUI-0.0.3-win-x86.zip">AlphaRed7-GUI-0.0.3-win-x86.zip</a> </li>
-    <li>macOS: <a href ="./AlphaRed7-GUI-0.0.3-mac.zip">AlphaRed7-GUI-0.0.3-mac.zip</a></li>
-    <li>Linux: <a href ="./AlphaRed7-GUI-0.0.3-linux-x64.tar.gz">AlphaRed7-GUI-0.0.3-linux-x64.tar.gz</a></li>
-  </ul>
-  <em>macOS用户建议使用新版程序直接替换旧版程序，防止丢失用户信息。</em>
- </p>
+
 
       <h1 id="next">Future Features</h1>
       <!-- 不太可能支持的feature -->
@@ -60,7 +60,13 @@
       <li>支持双AI无动画多局对战，方便观察两AI胜率。</li>
       <li>其他建议或bug可以微信私聊或使用软件右下角提交bug按钮。</li>
       </ul>
+
+    <h1 >Known Issues</h1>
+    <ul>
+      <li>macOS在准备后进入在线比赛时会小概率直接crash，正在检查原因。</li>
+    </ul>
     </section>
+
 
 	<footer class="site-footer">
         
