--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
     <li>macOS: <a href ="./AlphaRed7-GUI-0.0.3-mac.zip">AlphaRed7-GUI-0.0.3-mac.zip</a></li>
     <li>Linux: <a href ="./AlphaRed7-GUI-0.0.3-linux-x64.tar.gz">AlphaRed7-GUI-0.0.3-linux-x64.tar.gz</a></li>
   </ul>
+  <em>注意设置一下Round Time，否则默认是2s。</em> <br/>
   <em>macOS用户建议使用新版程序直接替换旧版程序，防止丢失用户信息。</em>
  </p>
       <h1 id="note">Release Notes</h1>
@@ -48,7 +49,8 @@
        Mac版删除了多余的调试信息，防止Segmentfault崩溃。</li></ul> </p>
       <p><h2> v0.0.1</h2> <ul><li>第一个公开版本!</li></ul></p>
 
-
+<h1>Comments</h1>
+<section data-title="Red7" data-isso-id="//red7.zrt.io" id="isso-thread"></section>  
       <h1 id="next">Future Features</h1>
       <!-- 不太可能支持的feature -->
       <ul>
@@ -70,8 +72,24 @@
 
 	<footer class="site-footer">
         
-        <span class="site-footer-credits" style="margin-left:50px;">Made by <a href="https://blog.lcybox.com">Chenyao Lou</a> and <a href="https://blog.zrt.io">Ruotian Zhang</a>.</span>
+        <span class="site-footer-credits" style="margin-left:50px;">Made by <a href="https://blog.lcybox.com">Chenyao Lou</a> and <a href="https://zrt.io/blog/">Ruotian Zhang</a>.</span>
       </footer>    
+<script data-isso="https://zrt.io/comment/"  
+        data-isso-css="true"
+        data-isso-lang="zh_CN"
+        data-isso-reply-to-self="false"
+        data-isso-require-author="false"
+        data-isso-require-email="false"
+        data-isso-max-comments-top="10"
+        data-isso-max-comments-nested="5"
+        data-isso-reveal-on-click="5"
+        data-isso-avatar="true"
+        data-isso-avatar-bg="#f0f0f0"
+        data-isso-avatar-fg="#9abf88 #5698c4 #e279a3 #9163b6 ..."
+        data-isso-vote="true"
+        data-vote-levels=""
+        src="https://zrt.io/comment/js/embed.min.js"></script>
   </body>
 </html>
+
 
