--- a/cli.html
+++ b/cli.html
@@ -102,8 +102,8 @@
     
     <div class="form-group">
       <div class="col-md-10 col-md-offset-2" style="margin-left:150px">
-        <button type="button" class="btn btn-success btn-raised" onclick="click_run();">Run</button>
-        <button type="button" class="btn btn-danger btn-raised" onclick="click_stop();">Stop</button>
+        <button type="button" class="btn btn-success btn-raised" onclick="click_run();" id="btnrun">Run</button>
+        <button type="button" class="btn btn-danger btn-raised" onclick="click_stop();" id="btnstop">Stop</button>
         <button type="button" class="btn btn-info btn-raised" onclick="click_clear();">Clear</button>
       </div>
     </div>
